--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ authors = ["NEAR DevHub <neardevhub.org>"]
 edition = "2021"
 repository = "https://github.com/FroVolod/neardevhub-contract"
 
+[package.metadata.near.reproducible_build]
+image = "docker.io/sourcescan/cargo-near:0.6.0"
+image_digest = "sha256:bf488476d9c4e49e36862bbdef2c595f88d34a295fd551cc65dc291553849471"
+container_build_command = ["cargo", "near", "build", "--no-docker", "--locked", "--no-abi", "--color", "--auto"]
+repo_git_url = "https://github.com/near/cargo-near-new-project-template.git"
+
 [lib]
 crate-type = ["cdylib"]
 
