--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,18 @@ authors = ["NEAR DevHub <neardevhub.org>"]
 edition = "2021"
 repository = "https://github.com/FroVolod/neardevhub-contract"
 
+# fields to configure build with WASM reproducibility, according to specs  
+# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
 [package.metadata.near.reproducible_build]
-image = "docker.io/sourcescan/cargo-near:0.6.0"
-image_digest = "sha256:bf488476d9c4e49e36862bbdef2c595f88d34a295fd551cc65dc291553849471"
-container_build_command = ["cargo", "near", "build", "--no-docker", "--locked", "--no-abi", "--color", "--auto"]
+# docker image, descriptor of build environment
+image = "sourcescan/cargo-near:git-e3c8adb4b5542cbfc159bb1534f2b94c900c1648-1.80.0"
+# tag after colon above serves only descriptive purpose; image is identified by digest
+image_digest = "sha256:4bbcdf985936e1cb9b71c627a00cb9b53546ac0c9ef6b175da2918c1dea21363"
+# build command inside of docker container 
+# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
+# the command may be any combination of flags of `cargo-near`,
+# supported by respective version of binary inside the container besides `--no-locked` flag
+container_build_command = ["cargo", "near", "build"]
 
 [lib]
 crate-type = ["cdylib"]
